# protokollant

./: CHANGELOG.md  Cargo.toml
.github/workflows/: ci.yml  release.yaml
example/: CHANGELOG.md
src/: changelog.pest  diff.rs  generate.rs  json.rs  main.rs  manifests.rs  model.rs  parser.rs
