[package]
name = "protokollant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["derive"] }
colored = "2.0.0"
diff = "0.1"
itertools = "0.10.5"
pest = "2.5"
pest_derive = "2.5"
semver = "1.0"
time = { version = "0.3.20", features = ["parsing", "local-offset"] }
