[package]
name = "protokollant"
version = "0.2.0"
edition = "2021"

[dependencies]
colored = "2.0.0"
diff = "0.1"
itertools = "0.10.5"
pest = "2.5"
pest_derive = "2.5"
semver = "1.0"

[dependencies.clap]
version = "4.1"
features = ["derive"]

[dependencies.time]
version = "0.3.20"
features = [
    "parsing",
    "local-offset",
]

[dependencies.toml]
version = "0.7.2"
features = ["preserve_order"]
