[package]
name = "protokollant"
version = "0.5.1"
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
colored = "2.0.0"
diff = "0.1"
itertools = "0.10.5"
pest = "2.5"
pest_derive = "2.5"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3.20", features = ["parsing", "local-offset"] }
toml_edit = "0.19"
